--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,7 @@ dependencies {
     def gson_version = "2.8.7"
     def lottie_version = "4.0.0"
     def stetho_version = "1.5.1"
+    def retrofit_version = "2.9.0"
 
     implementation "androidx.core:core-ktx:$androidx_core_version"
     implementation "androidx.appcompat:appcompat:$appcompat_version"
@@ -83,6 +84,8 @@ dependencies {
 
     //API Library
     implementation "com.github.kittinunf.fuel:fuel-android:$fuel_version"
+    implementation group: 'com.squareup.retrofit2', name: 'retrofit', version: "$retrofit_version"
+
 
     //JSON Library
     implementation "com.google.code.gson:gson:$gson_version"
